Fix SonarQube quality issues